# irssg_py

./: .gitignore  MANIFEST.in  README.md  build_wheel.py  inject_mpi_dll.py  meson.build  pyproject.toml  test_import.py  windows_setup.bat
.github/workflows/: build.yml
backup_original/: build.yml
examples/test_irssg/: OUTCAR  WAVECAR  fort.154  fort.177  fort.180  fort.624  irssg.in
fortran/lib/: Makefile  irrep_ssg.f90  irrep_ssg.h  lib_bilbao.f90  lib_chrct.f90
fortran/src/: comms.f90  get_ssg.f90  linear_rep.f90
irssg/: __init__.py  cli.py  core.py  meson.build
lib_ssg/: Makefile.2  lib_bilbao.f90  lib_chrct.f90  lib_comms.f90  mathlib.f90
python/: meson.build
python/irssg/: __init__.py  _irssg.cpp  _irssg.pyx  cli.py  core.py  utils.py
python/irssg/fortran/src/: Makefile  init.f90  main.f90  wave_data.f90
scripts/: update_python_versions.py
src_irssg/: comms.h  comprel.f90  get_ssg.f90  irssg  linear_rep.f90  main.f90
